added loading adjustment

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Background Test</title>
+    <title>Kevin Rey - Portfolio</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
     <link rel="stylesheet" href="css/background.css">
@@ -21,15 +21,15 @@
     <div id="background-container"></div>
     
     <main class="relative z-10">
-        <div class="flex items-center justify-center min-h-screen">
-            <div class="text-center text-white p-8 bg-black bg-opacity-50 rounded-lg">
+        <div class="flex items-center justify-center min-h-screen main-content-section">
+            <div class="text-center animate-up text-white p-8 bg-black bg-opacity-50 rounded-lg">
                 <h1 class="text-4xl font-bold mb-4">Portfolio Tests</h1>
                 <p class="text-xl">Background animations should be visible behind this content</p>
                 <p class="text-sm mt-4 opacity-70">Check for rotating dot patterns and floating geometric shapes</p>
             </div>
         </div>
-        <div class="flex items-center justify-center min-h-screen">
-            <div class="text-center text-white p-8 bg-black bg-opacity-50 rounded-lg">
+        <div class="flex items-center justify-center min-h-screen main-content-section">
+            <div class="text-center text-white p-8 bg-black animate-up bg-opacity-50 rounded-lg">
                 <h1 class="text-4xl font-bold mb-4">Portfolio Tests</h1>
                 <p class="text-xl">Background animations should be visible behind this content</p>
                 <p class="text-sm mt-4 opacity-70">Check for rotating dot patterns and floating geometric shapes</p>
