--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="bg-gray-900">
     <div id="loading-screen" class="fixed inset-0 z-50 flex flex-col items-center justify-center text-white transition-opacity duration-1000 ease-in-out bg-gray-800">
         <div class="relative flex items-center justify-center w-64 h-64 mb-4">
-            <div class="absolute w-full h-full border-8 border-t-8 rounded-full border-b-teal-500 border-t-green-800 animate-spin"></div>
+            <div class="absolute w-full h-full border-[20px] border-t-[20px] rounded-full border-b-teal-500 border-t-green-800 animate-spin"></div>
             <img src="img/loading-scream.png" alt="KevsWeb Logo" class="w-40 h-40">
         </div>
     
@@ -61,7 +61,7 @@
                     loadingScreen.style.display = 'none';
                     setupIntersectionObserver();
                 }, 1000);
-            }, 2000);
+            }, 5000);
     
             function setupIntersectionObserver() {
                 const observerOptions = {
