--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
     <link rel="stylesheet" href="css/background.css">
+    <link href="https://fonts.google.com/specimen/Comic+Neue" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body class="bg-gray-900">
     <div id="background-container"></div>
     
-    <main class="relative z-10">
-        <div class="flex items-center justify-center min-h-screen main-content-section">
-            <div class="text-center animate-up text-white p-8 bg-black bg-opacity-50 rounded-lg">
-                <h1 class="text-4xl font-bold mb-4">Portfolio Tests</h1>
-                <p class="text-xl">Background animations should be visible behind this content</p>
-                <p class="text-sm mt-4 opacity-70">Check for rotating dot patterns and floating geometric shapes</p>
+    <main class="relative z-10 px-20">
+        <div class="flex items-center min-h-screen main-content-section">
+            <div class="animate-up text-white">
+                <h1 class="text-7xl hover:scale-105 overflow-visible hover:cursor-pointer ease-in-out duration-100 font-bold rgb font-bold mb-4">Talisic, <a class="text-teal-500">Kevin Rey</a> S.</h1>
+                <p class="text-xl">A Filipino front-end developer with back-end capabilities.</p>
             </div>
         </div>
         <div class="flex items-center justify-center min-h-screen main-content-section">
