--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
     <link rel="stylesheet" href="css/background.css">
-    <link href="https://fonts.google.com/specimen/Comic+Neue" rel="stylesheet">
+    <!-- <link href="https://fonts.google.com/specimen/Comic+Neue" rel="stylesheet"> -->
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body class="bg-gray-900">
@@ -34,11 +34,19 @@
                 </video>
             </div>
         </div>
-        <div class="flex items-center justify-center min-h-screen main-content-section">
-            <div class="text-center text-white p-8 bg-black animate-up bg-opacity-50 rounded-lg">
-                <h1 class="text-4xl font-bold mb-4">Portfolio Tests -2</h1>
-                <p class="text-xl">Background animations should be visible behind this content</p>
-                <p class="text-sm mt-4 opacity-70">Check for rotating dot patterns and floating geometric shapes</p>
+        <div class="flex items-center justify-center min-h-screen">
+            <div class="main-content-section flex w-full justify-between">
+                <div class="text-center text-white p-8 animate-right bg-black bg-opacity-50 rounded-lg">
+                    <h1 class="text-4xl font-bold mb-4">Portfolio Tests -2</h1>
+                    <p class="text-xl">Background animations should be visible behind this content</p>
+                    <p class="text-sm mt-4 opacity-70">Check for rotating dot patterns and floating geometric shapes</p>
+                </div>
+
+                <div class="text-center text-white p-8 animate-down bg-black bg-opacity-50 rounded-lg">
+                    <h1 class="text-4xl font-bold mb-4">Portfolio Tests -2</h1>
+                    <p class="text-xl">Background animations should be visible behind this content</p>
+                    <p class="text-sm mt-4 opacity-70">Check for rotating dot patterns and floating geometric shapes</p>
+                </div>
             </div>
         </div>
     </main>
