--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 <body class="bg-gray-900">
     <div id="background-container"></div>
     
-    <main class="relative z-10 px-20">
-        <div class="flex justify-between items-center min-h-screen main-content-section">
-            <div class="animate-up text-white">
-                <!-- <h1 class="text-7xl hover:scale-105 overflow-visible hover:cursor-pointer ease-in-out duration-100 font-bold rgb font-bold mb-4">Talisic, <a class="text-teal-500">Kevin Rey</a> S.</h1> -->
-                <h1 id="clickable-name" class="text-7xl hover:scale-105 overflow-visible hover:cursor-pointer ease-in-out duration-100 font-bold rgb font-bold mb-4">
+    <main class="relative z-10">
+        <div class="flex mx-20 justify-between items-center min-h-screen main-content-section">
+            <div class="text-white">
+                <h1 class="text-2xl animate-left">Hi<span class="text-teal-500">,</span> My <span class="text-teal-500">name</span> is</h1>
+                <h1 id="clickable-name" class="text-7xl animate-right hover:scale-105 hover:cursor-pointer ease-in-out duration-100 font-bold rgb font-bold mb-4">
                     Talisic, <span class="text-teal-500">Kevin Rey</span> S.
                 </h1>
-                <p class="text-2xl">A Filipino front-end developer with back-end capabilities.</p>
+                <p class="text-2xl animate-up">A Filipino front-end developer with back-end capabilities.</p>
             </div>
-            <div class="animate-up text-white">
+            <div class="animate-right text-white">
                 <video 
                     id="waving-video" 
                     class="waving-video" 
@@ -34,18 +34,11 @@
                 </video>
             </div>
         </div>
-        <div class="flex items-center justify-center min-h-screen">
-            <div class="main-content-section flex w-full justify-between">
-                <div class="text-center text-white p-8 animate-right bg-black bg-opacity-50 rounded-lg">
-                    <h1 class="text-4xl font-bold mb-4">Portfolio Tests -2</h1>
-                    <p class="text-xl">Background animations should be visible behind this content</p>
-                    <p class="text-sm mt-4 opacity-70">Check for rotating dot patterns and floating geometric shapes</p>
-                </div>
-
-                <div class="text-center text-white p-8 animate-down bg-black bg-opacity-50 rounded-lg">
-                    <h1 class="text-4xl font-bold mb-4">Portfolio Tests -2</h1>
-                    <p class="text-xl">Background animations should be visible behind this content</p>
-                    <p class="text-sm mt-4 opacity-70">Check for rotating dot patterns and floating geometric shapes</p>
+        <div class="bg-white/80 px-20">
+             <div class="flex items-center min-h-screen">
+                <div class="main-content-section flex items-center w-full">
+                    <h1 class="text-4xl text-teal-500 text-center animate-right">About&nbsp;</h1>
+                    <h1 class="text-4xl text-teal-800 text-center animate-right-b">Me</h1>
                 </div>
             </div>
         </div>
