added about me section

--- a/index.html
+++ b/index.html
@@ -34,11 +34,16 @@
                 </video>
             </div>
         </div>
-        <div class="bg-white/80 px-20">
+        <div class="bg-white/85 px-20">
              <div class="flex items-center min-h-screen">
-                <div class="main-content-section flex items-center w-full">
+                <div class="main-content-section">
+                    <div class="flex w-max hover:scale-110 hover:cursor-pointer ease-in-out duration-100">
                     <h1 class="text-4xl text-teal-500 text-center animate-right">About&nbsp;</h1>
                     <h1 class="text-4xl text-teal-800 text-center animate-right-b">Me</h1>
+                    </div>
+                    <p class="w-[45vw] mt-5 animate-right-c text-xl text-justify">
+                        Hi, You can call me Kevs, a Front-end Developer with back-end capabilities, bringing 1 year of experience building web systems from small-scale businesses to manufacturing companies. As a Computer Science graduate with a passion for giving best user experiences, I focus on creating engaging user interfaces and responsive design using tech stack like Vue.js, Inertia.js and Laravel. I enjoy collaborating with teams to deliver efficient solutions and exploring creative projects including game development and digital art.
+                    </p>
                 </div>
             </div>
         </div>
