--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <h1 id="clickable-name" class="text-7xl animate-right hover:scale-105 hover:cursor-pointer ease-in-out duration-100 font-bold rgb font-bold mb-4">
                     Talisic, <span class="text-teal-500">Kevin Rey</span> S.
                 </h1>
-                <p class="text-2xl animate-up">A Filipino front-end developer with back-end capabilities.</p>
+                <p class="text-2xl animate-up">A Filipino Web Developer/UI Designer/Digital Artist.</p>
             </div>
             <div class="animate-right text-white">
                 <video 
