--- a/demo1.html
+++ b/demo1.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Dental Clinic System - Demo</title>
     <link rel="icon" href="/img/titlepic.png" type="image/png">
     <style>
         * {
@@ -50,7 +51,10 @@
 </head>
 <body>
     <div class="iframe-container">
-        <iframe src="https://embed.figma.com/proto/2IsCuJ5BpkSqE0r8zg2edm/Portfolio?node-id=2-5&p=f&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=2%3A5&embed-host=share" allowfullscreen></iframe>
+        <iframe 
+            src="https://embed.figma.com/proto/2IsCuJ5BpkSqE0r8zg2edm/Portfolio?node-id=2-5&p=f&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=2%3A5&embed-host=share&hide-ui=1" 
+            allowfullscreen>
+        </iframe>
     </div>
 </body>
 </html>
