--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
             </div>
         </header> -->
         <!-- Home section -->
-        <div class="flex flex-col lg:flex-row mx-20 justify-center lg:justify-between items-center min-h-screen main-content-section">
+        <div class="flex flex-col overflow-hidden lg:flex-row mx-20 justify-center lg:justify-between items-center min-h-screen main-content-section">
             <div class="text-white order-[2] lg:order-[1] items-center lg:items-start flex flex-col">
                 <h1 class="text-xs order-[2] lg:order-[1] lg:text-base xl:text-2xl animate-left-b">Hi<span class="text-teal-500">,</span> My <span class="text-teal-500">name</span> is</h1>
                 <div id="clickable-name" class="animate-left-b order-[3] lg:order-[2]">
-                    <h1 class="text-xl lg:text-4xl xl:text-7xl group items-end font-bold mb-0 lg:mb-2 xl:mb-4 inline-flex transition-all duration-200 ease-out active:scale-95 cursor-pointer">
+                    <h1 class="text-xl pl-[10vw] lg:pl-0 lg:text-4xl xl:text-7xl group items-end font-bold mb-0 lg:mb-2 xl:mb-4 inline-flex transition-all duration-200 ease-out active:scale-95 cursor-pointer">
                         Talisic, 
                         <span class="text-teal-500">Kevin Rey&nbsp;</span> S.
                         <div class="flex transition-all duration-300 ease-out
@@ -140,7 +140,7 @@
                     </div>
                 </div>
             </div>
-            <div class="animate-popin order-[1] lg:order-[2] text-white">
+            <div class="animate-popin order-[1] mr-[2%] lg:order-[2] text-white">
                 <video 
                     id="waving-video" 
                     class="waving-video xl:w-60 w-32 h-32 md:w-36 md:h-36 lg:w-72 lg:h-72 xl:h-60" 
@@ -180,23 +180,13 @@
                 </div>
             </div> -->
             <div class="flex py-10 overflow-hidden min-h-screen">
-                <div class="main-content-section flex flex-col gap-5 w-full">
-                    <h1 class="text-4xl text-right text-teal-500 animate-left mb-8">What I use</h1>
+                <div class="flex flex-col gap-5 w-full">
+                    <div class="main-content-section">
+                        <h1 class="text-4xl text-right text-teal-500 animate-left mb-8">What I use</h1>
+                    </div>
                     <div class="flex flex-row main-content-section items-center justify-between">
                         <!-- Images -->
-                        <div class="grid animate-left-b grid-cols-5 gap-5">
-                            <div class="skill-item bg-white p-4 rounded-lg shadow-md hover:shadow-lg">
-                                <img src="img/aboutme/php.png" alt="PHP" class="skill-icon mx-auto">
-                            </div>
-                            <div class="skill-item bg-white p-4 rounded-lg shadow-md hover:shadow-lg">
-                                <img src="img/aboutme/javascript.png" alt="JavaScript" class="skill-icon mx-auto">
-                            </div>
-                            <div class="skill-item bg-white p-4 rounded-lg shadow-md hover:shadow-lg">
-                                <img src="img/aboutme/html.png" alt="HTML" class="skill-icon mx-auto">
-                            </div>
-                            <div class="skill-item bg-white p-4 rounded-lg shadow-md hover:shadow-lg">
-                                <img src="img/aboutme/css.png" alt="CSS" class="skill-icon mx-auto">
-                            </div>
+                        <div class="grid animate-left-b grid-cols-6 gap-5">
                             <div class="skill-item bg-white p-4 rounded-lg shadow-md hover:shadow-lg">
                                 <img src="img/aboutme/laravel.png" alt="Laravel" class="skill-icon mx-auto">
                             </div>
@@ -221,7 +211,25 @@
                         <div class="text-right animate-left-b">
                             <h3 class="text-xl font-semibold text-teal-800 mb-3">Web Development Stack</h3>
                             <p class="text-gray-800 ">
-                                PHP, JavaScript, HTML, CSS, Laravel, Livewire, Inertia.js, Vue.js, React, Tailwind CSS
+                                Laravel, Livewire, Inertia.js, Vue.js, React, Tailwind CSS
+                            </p>
+                        </div>
+                    </div>
+                    <div class="flex flex-row main-content-section items-center justify-between">
+                        <!-- Images -->
+                        <div class="flex flex-row animate-left-b gap-2">
+                            <div class="skill-item bg-white p-4 rounded-lg shadow-md hover:shadow-lg">
+                                <img src="img/aboutme/git.png" alt="Git" class="skill-icon mx-auto">
+                            </div>
+                            <div class="skill-item bg-white p-4 rounded-lg shadow-md hover:shadow-lg">
+                                <img src="img/aboutme/github.png" alt="Github" class="skill-icon mx-auto">
+                            </div>
+                        </div>
+                        <!-- Description -->
+                        <div class="text-right animate-left-b">
+                            <h3 class="text-xl font-semibold text-teal-800 mb-3">Version Control</h3>
+                            <p class="text-gray-800 ">
+                                Git, Github
                             </p>
                         </div>
                     </div>
@@ -325,15 +333,56 @@
             </div>
             <div class="py-5 main-content-section">
                 <h2 class="text-4xl w-full animate-down text-center text-teal-700 px-5 font-bold">Experience</h2>
-                <section class="relative pl-0.5 animate-down min-h-screen">
-                    <!-- Static border line -->
-                    <div class="absolute left-0 top-0 w-0.5 h-full bg-gray-300"></div>
-                    
-                    <!-- Moving indicator dot -->
-                    <div class="sticky top-1/2 w-1 h-[20vh] rgb-bg rounded-full transform -translate-x-3/4 translate-y-1 z-10"></div>
-                    
-                    <!-- Your experience content -->
-                </section>
+                <div class="flex flex-row animate-down gap-5 w-full">
+                    <section class="relative pl-0.5 min-h-screen">
+                        <!-- Static border line -->
+                        <div class="absolute left-0 top-0 w-0.5 h-full bg-gray-300"></div>
+                        <!-- Moving indicator dot -->
+                        <div class="sticky top-[20%] w-1 h-[30vh] transform -translate-x-3/4 translate-y-1 z-10">
+                            <div class="w-full h-full flex items-center rgb-bg rounded-full">
+                                <div class="w-4 h-4 rounded-full bg-teal-500 z-10 relative -mx-1.5 left-[1px]"></div>
+                            </div>
+                        </div>
+                        <!-- <div class="sticky top-[30vh] w-4 h-4 bg-teal-500 rounded-full transform -translate-x-1/2 -translate-y-[6vh] z-20"></div> -->
+                    </section>
+                    <section class="py-[2%]">
+                        <div class="h-full flex flex-col w-full justify-between">
+                            <div>
+                                <h1 class="text-2xl text-teal-900">Internship</h1>
+                                <h1 class="text-lg text-gray-800"><a href="https://www.shinkozan.com/">Shinkozan Corporation</a></h1>
+                                <p class="text-gray-700">Data Entry Intern: January 2020 - February 2020</p>
+                                <ul class="list-disc list-outside ml-6 mt-2 text-gray-600">
+                                    <li>Migrated and converted legacy Excel databases to updated file formats</li>
+                                    <li>Organized and maintained office paper documentation</li>
+                                    <li>Provided administrative support and assisted with various office tasks</li>
+                                </ul>
+                            </div>
+                            <div>
+                                <h1 class="text-lg text-gray-800"><a href="https://genmarianoalvarez.gov.ph/">GMA Municipal Hall - ICT</a></h1>
+                                <p class="text-gray-700">IT Intern: August 2023 - September 2023</p>
+                                <ul class="list-disc list-outside ml-6 mt-2 text-gray-600">
+                                    <li>Conducted testing and debugging for municipal web system development project</li>
+                                    <li>Developed web applications using HTML, CSS, JavaScript, PHP, and XAMPP server environment</li>
+                                    <li>Performed computer maintenance, troubleshooting, and system optimization for municipal workstations</li>
+                                    <li>Organized municipal paper documentation</li>
+                                    <li>Provided technical support and assisted with various IT infrastructure tasks</li>
+                                </ul>
+                            </div>
+                            <div>
+                                <h1 class="text-2xl text-teal-900">Full-time Employment</h1>
+                                <h1 class="text-lg text-gray-800"><a href="https://www.betafoam.ph/">Betafoam Corporation</a></h1>
+                                <p class="text-gray-700">IT Programmer: August 2024 - Current</p>
+                                <ul class="list-disc list-outside ml-6 mt-2 text-gray-600">
+                                    <li>Develop and maintain web applications using Laravel, Livewire, Vue.js, Inertia.js, and Tailwind CSS with SQL Server database</li>
+                                    <li>Implement responsive front-end user interfaces and optimize user experience</li>
+                                    <li>Monitor database performance and manage automated backup systems</li>
+                                    <li>Create comprehensive user manuals and technical documentation</li>
+                                    <li>Design wireframes and process flow diagrams for system architecture</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </section>
+                </div>
             </div>
         </div>
         <div id="home" class="px-20">
